--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -19,6 +19,18 @@ ENTRYPOINT ["java", "-jar", "app.jar"]  //En el contenedor ejecuta este comando
 
 EXPOSE 8080 // Lo expone en el puerto 8080 cuando este corriendo el contenedor
 
+//*****************************Dockerfile crear contenedor de node************************************//
+
+FROM node:current-slim
+
+WORKDIR /usr/src/app
+COPY package.json .
+RUN npm install
+
+EXPOSE 8080
+CMD [ "npm", "start" ]
+
+COPY . .
 
 //****************************Ejecutar Dockerfile************************************//
   //** Una vez que nuestro Dockerfile se ha creado correctamente, debemos ejecutar docker**//
@@ -31,7 +43,7 @@ docker build ./ -t asadali08527/first-repo
 docker build --tag paqueteria:1.0 .  //Crea una imagen nueva con la informacion del Dockerfile llamada paqueteria:1.0
 
 //*********************************Correr una imagen**************************************//
-
+docker run -p 8080:3000 nombre-de-tu-imagen
 docker run --publish 8080:8080 paqueteria:1.0 //Exponemos del puerto 8080 del contenedor al puerto 8080 del equipo local para comunicarnos con la aplicacion y a lo ultimo colocamos el nombre de la image con su tag paqueteria:1.0
 
 //******************************Consultar Imagenes creadas*********************************//
